tests/baselines/reference/overloadOnConstInheritance2.errors.txt
tests/cases/compiler/overloadOnConstInheritance2.ts(5,11): error TS2430: Interface 'Deriver' incorrectly extends interface 'Base'.
  Types of property 'addEventListener' are incompatible.
    Type '(x: "bar") => string' is not assignable to type '{ (x: string): any; (x: "foo"): string; }'.
      Type '(x: "bar") => string' provides no match for the signature '(x: string): any'
tests/cases/compiler/overloadOnConstInheritance2.ts(6,5): error TS2382: Specialized overload signature is not assignable to any non-specialized signature.


==== tests/cases/compiler/overloadOnConstInheritance2.ts (2 errors) ====
    interface Base {
        addEventListener(x: string): any;
        addEventListener(x: 'foo'): string;
    }
    interface Deriver extends Base {
              ~~~~~~~
!!! error TS2430: Interface 'Deriver' incorrectly extends interface 'Base'.
!!! error TS2430:   Types of property 'addEventListener' are incompatible.
!!! error TS2430:     Type '(x: "bar") => string' is not assignable to type '{ (x: string): any; (x: "foo"): string; }'.
!!! error TS2430:       Type '(x: "bar") => string' provides no match for the signature '(x: string): any'
        addEventListener(x: 'bar'): string; // shouldn't need to redeclare the string overload
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2382: Specialized overload signature is not assignable to any non-specialized signature.
    }
    